# nzinsargps-verticallandmotion

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: container.yaml
src/nzinsargps_verticallandmotion/: NZInsarGPS_verticallandmotion_postprocess.py  NZInsarGPS_verticallandmotion_preprocess.py  __init__.py  cli.py  pyproject.toml
