[project]
name = "nzinsargps-verticallandmotion"
version = "0.1.0"
description = "TODO"
readme = "README.md"
authors = [ 
	{ name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
]

[project.scripts]
nzinsargps-verticallandmotion = "nzinsargps_verticallandmotion.cli:main"

[build-system]
requires = ["uv_build>=0.8.11, <0.9.0"]
build-backend = "uv_build"

