[project]
name = "nzinsargps-verticallandmotion"
version = "0.1.0"
description = "TODO"
readme = "README.md"
authors = [ 
	{ name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "dask>=2025.9.1",
    "netcdf4>=1.7.2",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "xarray>=2025.9.0",
]

[project.scripts]
nzinsargps-verticallandmotion = "nzinsargps_verticallandmotion.cli:main"

[build-system]
requires = ["uv_build>=0.8.11, <0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]